# MiaCanFaker

./: DCF0925.dcf  decors.py  frames.py  game.py  main.py  sevcon.py  waveshare.py  waveshare_bus.py
.github/workflows/: build.yml
USB-CAN-A/: canusb
ecu/: ecu.kicad_pcb  ecu.kicad_pro  ecu.kicad_sch  tme_06_04_2023.xlsx
ecu/gerber/: ecu-B_Cu.gbl  ecu-B_Mask.gbs  ecu-B_Paste.gbp  ecu-B_Silkscreen.gbo  ecu-Edge_Cuts.gm1  ecu-F_Cu.gtl  ecu-F_Mask.gts  ecu-F_Paste.gtp  ecu-F_Silkscreen.gto  ecu-NPTH.drl  ecu-PTH.drl
ecu_firmware/: .mxproject  CMakeCache.txt  CMakeLists.txt  DCF0925.dcf  Makefile  cmake_install.cmake  compile_commands.json  ecu_firmware.ioc  make_database.sh  makefile  openocd.cfg  stm32-arm-toolchain.cmake
ecu_firmware/Core/Inc/: FreeRTOSConfig.h  main.h  sevcon.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
ecu_firmware/Core/Inc/tasks/: dashboard.h  throttle_handling.h
ecu_firmware/Core/Src/: SSD1322_API.c  SSD1322_HW_Driver.c  can_receiver.c  main.c  sevcon.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  syscall_stubs.c
ecu_firmware/Core/Src/tasks/: blinkenlights.c  charging.c  dashboard.c  inverter.c  throttle_handling.c
ecu_firmware/miagl/: Makefile  cmake_install.cmake
ecu_firmware/miagl/lib/: Makefile  cmake_install.cmake
miagl/: .gitignore  CMakeLists.txt  README.md  gamma.py  x86-main.c
miagl/fonts/: digits.json  digits_4x7.json  helvetica_bold8.json  speedo.json
miagl/inc/: miaui-gauge.h  miaui-popup.h  miaui-resources.h  miaui-test.h  miaui-utils.h  miaui.h
miagl/lib/: CMakeLists.txt
miagl/lib/inc/: miagl-bitmap.h  miagl-buffer.h  miagl-driver.h  miagl-font.h  miagl-gfx.h  miagl-helpers.h  miagl.h
miagl/lib/src/: miagl-bitmap.c  miagl-font.c  miagl-gfx.c  miagl.c
miagl/scripts/: bake_helvetica.py  make_resources.py  speedo_hand.py
miagl/src/: miaui-gauge.c  miaui-popup.c  miaui-resources.c  miaui-test.c  miaui-utils.c  miaui.c
miagl/toolchains/: arm-none-eabi.cmake  cortex-m3.cmake
miagl/ui/: CMakeLists.txt
miagl/ui/inc/: miagl-driver.h
